Update repository URLs in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -298,12 +298,12 @@
 	    <repository>
 	        <id>nexus</id>
 	        <name>demo-release</name>
-	        <url>http://100.31.115.18:8081/repository/demo-release//</url>
+	        <url>http://54.210.36.209:8081/repository/demo-release/</url>
 	    </repository>
 	    <snapshotRepository>
 	        <id>nexus</id>
 	        <name>demo</name>
-	        <url>http://100.31.115.18:8081/repository/demo//</url>
+	        <url>http://54.210.36.209:8081/repository/demo/</url>
 	    </snapshotRepository>
     </distributionManagement>
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
